tests/ui/feature-gates/feature-gate-coroutines.stderr
error[E0658]: yield syntax is experimental
  --> $DIR/feature-gate-coroutines.rs:2:5
   |
LL |     yield true;
   |     ^^^^^^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(coroutines)]` to the crate attributes to enable

error[E0658]: yield syntax is experimental
  --> $DIR/feature-gate-coroutines.rs:8:5
   |
LL |     yield;
   |     ^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(coroutines)]` to the crate attributes to enable

error[E0658]: yield syntax is experimental
  --> $DIR/feature-gate-coroutines.rs:9:5
   |
LL |     yield 0;
   |     ^^^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(coroutines)]` to the crate attributes to enable

error[E0627]: yield expression outside of coroutine literal
  --> $DIR/feature-gate-coroutines.rs:2:5
   |
LL |     yield true;
   |     ^^^^^^^^^^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0627, E0658.
For more information about an error, try `rustc --explain E0627`.
